--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint --fix",
+    "build": "vue-cli-service build --mode=production",
+    "serve": "vue-cli-service serve",
     "dev": "yarn serve --mode=development"
   },
   "dependencies": {
