--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "markdown-it": "^9.1.0",
+    "markdown-it-hashtag": "^0.4.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
