--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "checkpoints",
-  "version": "0.0.1",
-  "private": true,
+  "version": "0.1.0",
+  "author": "Wagner Andrade <wagner@wedy.com>",
+  "license": "MIT",
   "scripts": {
     "lint": "vue-cli-service lint --fix",
     "build": "vue-cli-service build --mode=production",
